--- a/QuickCloseOpps/package.xml
+++ b/QuickCloseOpps/package.xml
@@ -2,12 +2,12 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <fullName>QuickCloseOpps</fullName>
     <types>
-        <members>Close_Lost_All_Opps</members>
+        <members>Close_Lost_all_Open_Opps_on_an_Account</members>
         <name>Flow</name>
     </types>
     <types>
         <members>Account.Close_Open_Opps</members>
         <name>QuickAction</name>
     </types>
-    <version>46.0</version>
+    <version>47.0</version>
 </Package>
